--- a/templates/home.html
+++ b/templates/home.html
@@ -615,148 +615,134 @@
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Home 1  : FAQ Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-<div class="home-1_faq-section section-padding-120">
-  <div class="home-1_faq-shape-1">
-    <img src="{% static '/image/home-1/faq-shape-1.svg' %}" alt="image alt" />
-  </div>
-  <div class="home-1_faq-shape-2">
-    <img src="{% static '/image/home-1/faq-shape-2.svg' %}" alt="image alt" />
-  </div>
+
+<div class="integrator-faq-section padding-bottom-150 padding-top-150">
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-xxl-6 col-lg-8 col-md-9">
-        <div class="section-heading section-heading text-center">
-          <h2 class="section-heading__title heading-md text-black">
-            Часто задаваемые вопросы
-          </h2>
-        </div>
-      </div>
+    <div class="section-heading">
+      <h2 class="integrator-subheading heading-md text-center">
+        Частые вопросы
+      </h2>
     </div>
-    <div class="row row--custom">
-      <div class="col-lg-10">
-        <div class="accordion-style-1" id="home-1-faq">
-          <div class="accordion-item">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#home-1-faq-item" aria-expanded="true" aria-controls="home-1-faq-item">
-              Сколько времени потребуется на внедрение Битрикс24?
-            </button>
-            <div id="home-1-faq-item" class="accordion-collapse collapse show" data-bs-parent="#home-1-faq">
-              <div class="accordion-item__body">
-                <b>Пакетные (стартовые) внедрения</b> занимают 2-3 месяца. Первые 2
-                недели занимает формирование технического задания и его
-                реализация. А остальное время занимает ввод CRM в эксплуатацию:
-                обучение, ответы на вопросы, внесение правок, формирование
-                привычки у сотрудников компании. При <b>проектном формате работы</b>
-                <a href="#">внедрение Битрикс24</a> может занимать от 1 дня до 6 месяцев.
-              </div>
+    <div class="integrator-faq row row--custom">
+      <div class="integrator-faq-accordion" id="home-1-faq">
+        <div class="accordion-item">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#home-1-faq-item" aria-expanded="true" aria-controls="home-1-faq-item">
+            <h3>Сколько времени потребуется на внедрение Битрикс24?</h3> <div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+          </button>
+          <div id="home-1-faq-item" class="accordion-collapse collapse show" data-bs-parent="#home-1-faq">
+            <div class="accordion-item__body">
+              <b>Пакетные (стартовые) внедрения</b> занимают 2-3 месяца. Первые 2
+              недели занимает формирование технического задания и его
+              реализация. А остальное время занимает ввод CRM в эксплуатацию:
+              обучение, ответы на вопросы, внесение правок, формирование
+              привычки у сотрудников компании. При <b>проектном формате работы</b>
+              <a href="#">внедрение Битрикс24</a> может занимать от 1 дня до 6 месяцев.
             </div>
           </div>
-          <div class="accordion-item">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#home-1-faq-item-2" aria-expanded="false" aria-controls="home-1-faq-item-2">
-              Какие проблемы могут возникнуть в процессе внедрения?
-            </button>
-            <div id="home-1-faq-item-2" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
-              <div class="accordion-item__body">
-                - <b>Изменения в бизнес-процессах.</b> Внедрение новой платформы с
-                большой вероятностью потребует изменений в текущих
-                бизнес-процессах. Это может вызвать некоторое сопротивление (в
-                том числе саботаж) и временную нестабильность. Мы поможем вам
-                донести до ваших сотрудников цели внедрения и возможную пользу,
-                которую они сами могут получить - это уменьшит вероятность
-                возникновения данной проблемы.<br /> <br />
-                - <b>Недостаток ресурсов.</b> Внедрение
-                Битрикс24 может потребовать дополнительных (выделенных)
-                человеческих ресурсов, т.е. необходим ответственный сотрудник с
-                вашей стороны. Он будет заниматься внедрением вместе с нами,
-                выступать первой линией поддержки для ваших сотрудников. Если
-                такого нет - мы постараемся выполнить сами эту функцию. Но с ним
-                точно будет лучше.<br /><br />
-                - <b>Отсутствие оперативной поддержки.</b> Если
-                возникают проблемы или вопросы, даже небольшие, крайне важно
-                оперативно получить ответ от компетентного специалиста. В
-                противном случае начнет формироваться "снежный ком", из-за
-                которого в конечном счете внедренной CRM могут перестать
-                пользоваться. Мы окажем вам такую поддержку при любых форматах
-                работы.
-              </div>
+        </div>
+        <div class="accordion-item">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#home-1-faq-item-2" aria-expanded="false" aria-controls="home-1-faq-item-2">
+            <h3>Какие проблемы могут возникнуть в процессе внедрения?</h3>Какие проблемы могут возникнуть в процессе внедрения?<div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+          </button>
+          <div id="home-1-faq-item-2" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
+            <div class="accordion-item__body">
+              - <b>Изменения в бизнес-процессах.</b> Внедрение новой платформы с
+              большой вероятностью потребует изменений в текущих
+              бизнес-процессах. Это может вызвать некоторое сопротивление (в
+              том числе саботаж) и временную нестабильность. Мы поможем вам
+              донести до ваших сотрудников цели внедрения и возможную пользу,
+              которую они сами могут получить - это уменьшит вероятность
+              возникновения данной проблемы.<br /> <br />
+              - <b>Недостаток ресурсов.</b> Внедрение
+              Битрикс24 может потребовать дополнительных (выделенных)
+              человеческих ресурсов, т.е. необходим ответственный сотрудник с
+              вашей стороны. Он будет заниматься внедрением вместе с нами,
+              выступать первой линией поддержки для ваших сотрудников. Если
+              такого нет - мы постараемся выполнить сами эту функцию. Но с ним
+              точно будет лучше.<br /><br />
+              - <b>Отсутствие оперативной поддержки.</b> Если
+              возникают проблемы или вопросы, даже небольшие, крайне важно
+              оперативно получить ответ от компетентного специалиста. В
+              противном случае начнет формироваться "снежный ком", из-за
+              которого в конечном счете внедренной CRM могут перестать
+              пользоваться. Мы окажем вам такую поддержку при любых форматах
+              работы.
             </div>
           </div>
-          <div class="accordion-item">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#home-1-faq-item-3" aria-expanded="false" aria-controls="home-1-faq-item-3">
-              Оказываете ли вы поддержку после внедрения?
-            </button>
-            <div id="home-1-faq-item-3" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
-              <div class="accordion-item__body">
-                Да, после внедрения Битрикс24 <b>мы оказываем консультационную
-                  поддержку</b>. Также у нас <b>есть услуга по сопровождению</b>, в рамках
-                которой мы всегда готовы помочь с решением ваших задач,
-                обучением сотрудников, донастройкой Битрикс24.
-              </div>
+        </div>
+        <div class="accordion-item">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#home-1-faq-item-3" aria-expanded="false" aria-controls="home-1-faq-item-3">
+            <h3>Оказываете ли вы поддержку после внедрения?</h3><div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+          </button>
+          <div id="home-1-faq-item-3" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
+            <div class="accordion-item__body">
+              Да, после внедрения Битрикс24 <b>мы оказываем консультационную
+                поддержку</b>. Также у нас <b>есть услуга по сопровождению</b>, в рамках
+              которой мы всегда готовы помочь с решением ваших задач,
+              обучением сотрудников, донастройкой Битрикс24.
             </div>
           </div>
-          <div class="accordion-item">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#home-1-faq-item-6" aria-expanded="false" aria-controls="home-1-faq-item-4">
-              Предоставляете ли гарантию на свои услуги?
-            </button>
-            <div id="home-1-faq-item-6" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
-              <div class="accordion-item__body">
-                Да, <b>мы предоставляем гарантию</b>. Если речь идет о проектной
-                работе, то в течении 14 дней после ввода в эксплуатацию мы можем
-                внести любые правки в рамках технического задания. Если по
-                истечению 14 дней возникают проблемы в эксплуатации настроек, и
-                эти проблемы возникли не из-за того, что обновился функционал
-                или кто-то что-то сломал - мы также внесем все необходимые
-                правки.
-              </div>
+        </div>
+        <div class="accordion-item">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#home-1-faq-item-6" aria-expanded="false" aria-controls="home-1-faq-item-4">
+            <h3>Предоставляете ли гарантию на свои услуги?</h3><div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+          </button>
+          <div id="home-1-faq-item-6" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
+            <div class="accordion-item__body">
+              Да, <b>мы предоставляем гарантию</b>. Если речь идет о проектной
+              работе, то в течении 14 дней после ввода в эксплуатацию мы можем
+              внести любые правки в рамках технического задания. Если по
+              истечению 14 дней возникают проблемы в эксплуатации настроек, и
+              эти проблемы возникли не из-за того, что обновился функционал
+              или кто-то что-то сломал - мы также внесем все необходимые
+              правки.
             </div>
           </div>
-          <div class="accordion-item">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#home-1-faq-item-5" aria-expanded="false" aria-controls="home-1-faq-item-5">
-              Какие интеграции с другими системами можно реализовать?
-            </button>
-            <div id="home-1-faq-item-5" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
-              <div class="accordion-item__body">
-                <b>Любые</b>. С большим количеством сервисов <b>есть готовые интеграци</b>и с
-                помощью приложений из маркетплейса Битрикс24. А там, где готовых
-                решений нет - можно разработать свою, т.к. у Битрикс24 <b>есть
-                  открытый API</b>. Но прежде мы все таки постараемся найти готовое
-                решение.
-              </div>
+        </div>
+        <div class="accordion-item">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#home-1-faq-item-5" aria-expanded="false" aria-controls="home-1-faq-item-5">
+            <h3>Какие интеграции с другими системами можно реализовать?</h3><div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+          </button>
+          <div id="home-1-faq-item-5" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
+            <div class="accordion-item__body">
+              <b>Любые</b>. С большим количеством сервисов <b>есть готовые интеграци</b>и с
+              помощью приложений из маркетплейса Битрикс24. А там, где готовых
+              решений нет - можно разработать свою, т.к. у Битрикс24 <b>есть
+                открытый API</b>. Но прежде мы все таки постараемся найти готовое
+              решение.
             </div>
           </div>
-          <div class="accordion-item">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#home-1-faq-item-4" aria-expanded="false" aria-controls="home-1-faq-item-4">
-              Как обеспечивается безопасность данных в Битрикс24?
-            </button>
-            <div id="home-1-faq-item-4" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
-              <div class="accordion-item__body">
-                <b>Для облачных Битрикс24:</b> <br />
-                Для обеспечения бесперебойной работы
-                сервиса используются два независимых датацентра в Республике
-                Беларусь. Включена автоматическая и полуавтоматическая реакция
-                на аварийные ситуации. Все соединения с «Битрикс24» производятся
-                через шифрованный обмен данными 256bit. Максимальная защита от
-                самых разнообразных угроз безопасности обеспечивается
-                проактивным фильтром (WAF - Web Application Firewal).<br />
-                Подробнее можно почитать здесь: <a href="#">Безопасность Битрикс24</a> <br />
-                <b>Для коробочных Битрикс24:</b> <br /><br />
-                Все зависит от вас и ваших решений. Со своей стороны
-                мы предлагаем размещение на сертифицированном Битриксом
-                хостинге, предлагаем качественную и регулярную техническую
-                поддержку от наших партнеров.
-              </div>
+        </div>
+        <div class="accordion-item">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#home-1-faq-item-4" aria-expanded="false" aria-controls="home-1-faq-item-4">
+            <h3>Как обеспечивается безопасность данных в Битрикс24?</h3><div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+          </button>
+          <div id="home-1-faq-item-4" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
+            <div class="accordion-item__body">
+              <b>Для облачных Битрикс24:</b> <br />
+              Для обеспечения бесперебойной работы
+              сервиса используются два независимых датацентра в Республике
+              Беларусь. Включена автоматическая и полуавтоматическая реакция
+              на аварийные ситуации. Все соединения с «Битрикс24» производятся
+              через шифрованный обмен данными 256bit. Максимальная защита от
+              самых разнообразных угроз безопасности обеспечивается
+              проактивным фильтром (WAF - Web Application Firewal).<br />
+              Подробнее можно почитать здесь: <a href="#">Безопасность Битрикс24</a> <br />
+              <b>Для коробочных Битрикс24:</b> <br /><br />
+              Все зависит от вас и ваших решений. Со своей стороны
+              мы предлагаем размещение на сертифицированном Битриксом
+              хостинге, предлагаем качественную и регулярную техническую
+              поддержку от наших партнеров.
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="section-button">
-      <a href="#" class="btn-masco rounded-pill btn-fill--up"><span>Остались вопросы? Напишите нам</span></a>
     </div>
   </div>
 </div>
