feat: add interesting block

--- a/bitrixsite/static/css/integrator.css
+++ b/bitrixsite/static/css/integrator.css
@@ -199,6 +199,10 @@
     padding-top: 170px;
 }
 
+.integrator-subsection {
+    padding-top: 50px;
+}
+
 .integrator-row {
     display: flex;
     gap: 40px;
@@ -523,7 +527,7 @@ span.primary {
     font-weight: 700 !important;
     font-size: 60px !important;
     line-height: 1.2;
-    letter-spacing: -1;
+    letter-spacing: -1px;
     color: var(--btn-dark-primary);
     opacity: 0.05;
 }
@@ -908,6 +912,62 @@ span.primary {
     height: 100%;
     object-fit: cover;
     object-position: top;
+}
+
+/*INTERESTING*/
+
+.integrator-interesting-section {
+    background-color: var(--bg-fon-gray);
+    position: relative;
+}
+
+.integrator-interesting-section .container {
+    position: relative;
+    z-index: 10;
+}
+
+.integrator-interesting-points {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+
+.interesting-point {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: var(--bg-fon-text);
+    border-radius: 12px;
+    padding: 20px 30px;
+}
+
+.interesting-point .poin-number {
+    margin-bottom: 70px;
+}
+
+.interesting-title {
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 1.2;
+    letter-spacing: -1px;
+    color: var(--btn-hover-primary);
+}
+
+.interesting-point p.integrator-text {
+    margin-top: 0;
+}
+
+.interesting-more {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.5;
+    color: var(--btn-dark-primary);
+    text-decoration: underline !important;
+}
+
+
+.integrator-interesting-section .integrator-text {
+    margin-top: 20px;
 }
 
 /*MATERIALS*/
@@ -1436,6 +1496,10 @@ span.hash {
         height: 257px !important;
     }
 
+    .interesting-point .poin-number {
+        margin-bottom: 20px;
+    }
+
     .integrator-contact__image {
         display: none;
     }
@@ -1523,6 +1587,10 @@ span.hash {
 
     .point-title {
         margin-top: 20px;
+    }
+    
+    .integrator-interesting-points {
+        grid-template-columns: repeat(1, 1fr);
     }
 
     .integrator-top__certificats {
