--- a/templates/home.html
+++ b/templates/home.html
@@ -185,98 +185,6 @@
 </div>
 
 
-
-<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Home 1 : Service Section
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
-<div class="home-1_service-section padding-bottom-120" id="feature">
-  <div class="home-1_service-section-shape">
-    <img src="{% static '/image/home-1/service-section-shape.svg' %}" alt="image alt" />
-  </div>
-  <div class="container">
-    <div class="home-1_service-section-wrapper">
-      <div class="row justify-content-center">
-        <div class="col-xxl-6 col-xl-7 col-lg-8 col-md-9">
-          <div class="section-heading text-center">
-            <h2 class="section-heading__title heading-md text-black">
-              Решения, которые мы предлагаем
-            </h2>
-          </div>
-        </div>
-      </div>
-      <div class="row gutter-y-default justify-content-center">
-        <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-right">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-1.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
-            <div class="service-card__body">
-              <h3 class="service-card__title">
-                Внедрение и настройка Битрикс24
-              </h3>
-              <p>
-                Если у вас нет четкого и однозначного понимания, для чего вы
-                хотите внедрить Битрикс24 и нет времени на написание ТЗ - у нас
-                есть готовые оптимальные пакетные решения для быстрого
-                внедрения.
-              </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
-            </div>
-          </a>
-        </div>
-        <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-left">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-2.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
-            <div class="service-card__body">
-              <h3 class="service-card__title">Проектное внедрение</h3>
-              <p>
-                Если нужно внедрение CRM сразу во все процессы компании, есть
-                готовое ТЗ, которое нужно реализовать, или нужно решить одну
-                конкретную задачу в рамках проектного внедрения.
-              </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
-            </div>
-          </a>
-        </div>
-        <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-right">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-3.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
-            <div class="service-card__body">
-              <h3 class="service-card__title">Поддержка и Сопровождение</h3>
-              <p>
-                Непрерывная поддержка вашей компании в использовании CRM,
-                включающая консультации и помощь в поиске решения, донастройка
-                Битрикс24, обучение.
-              </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
-            </div>
-          </a>
-        </div>
-        <div class="col-xl-6 col-lg-6 col-md-10">
-          <a href="service-details.html" class="service-card hvr-fill" data-aos-duration="1000" data-aos="fade-left">
-            <div class="service-card__icon">
-              <img src="{% static '/image/icons/icon-service-4.svg' %}" alt="image alt" class="inline-svg" />
-            </div>
-            <div class="service-card__body">
-              <h3 class="service-card__title">Аудит вашей CRM</h3>
-              <p>
-                Проверим корректность настроек прав доступа, воронок, отчетов,
-                открытых линий и автоматизации. В виде отчета дадим заключение с
-                советами по улучшению.
-              </p>
-              <span class="service-card__link btn-link btn-arrow">Подробнее</span>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Home 1  : Content Section 1
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -444,108 +352,62 @@
 </div>
 
 
-
-<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Home 4 : Testimonial Section
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Interesting Section
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-<div class="home-4_testimonial-section padding-top-120 padding-bottom-120 bg-cream" bis_skin_checked="1">
-  <div class="container" bis_skin_checked="1">
-    <div class="section-heading">
-      <div class="row justify-content-md-between">
-        <div class="col-xl-6 col-md-8">
-          <h2 class="section-heading__title heading-md text-black text-start">
-            Отзывы наших клиентов
-          </h2>
-        </div>
-        <div class="col-xl-3 col-md-4">
-          <div class="section-heading__button text-end">
-            <a href="testimonial.html" class="btn-masco btn-masco rounded-pill btn-fill--up">
-              <span>Все отзывы</span></a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row gutter-y-30 justify-content-center" bis_skin_checked="1">
-      <div class="col-lg-6 col-md-10 aos-init aos-animate" data-aos="fade-left" data-aos-delay="100"
-        bis_skin_checked="1">
-        <div class="testimonial-widget-2" bis_skin_checked="1">
-          <div class="testimonial-widget-2__body" bis_skin_checked="1">
-            <p>
-              Сотрудничество с этой компанией стало для нас настоящим открытием! Их профессионализм и внимание к деталям
-              впечатляют. </p>
-            <div class="testimonial-widget-2__user-block" bis_skin_checked="1">
-              <img src="{% static '/image/icons/h03-feature-2.svg' %}" alt="image alt">
-              <div class="author-info" bis_skin_checked="1">
-                <h4 class="testimonial-widget-2__user-name">Анна Смирнова</h4>
-                <span class="testimonial-widget-2__user-position">Менеджер, Компания Б</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-10 aos-init aos-animate" data-aos="fade-left" data-aos-delay="200"
-        bis_skin_checked="1">
-        <div class="testimonial-widget-2" bis_skin_checked="1">
-          <div class="testimonial-widget-2__body" bis_skin_checked="1">
-            <p>
-              Мы получили отличный результат благодаря их команде. Рекомендуем всем, кто ищет надежного партнера! </p>
-            <div class="testimonial-widget-2__user-block" bis_skin_checked="1">
-              <img src="{% static '/image/icons/h03-feature-1.svg' %}" alt="image alt">
-              <div class="author-info" bis_skin_checked="1">
-                <h4 class="testimonial-widget-2__user-name">Иван Петров</h4>
-                <span class="testimonial-widget-2__user-position">Директор, Компания А</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Home 1 : Testimonial Section 
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-<div class="home-1_testimonial-section section-padding-120 bg-light-2" id="testimonial">
+<div class="integrator-interesting-section padding-bottom-150 padding-top-150" id="feature">
   <div class="container">
-    <div class="testimonial-widget-large">
-      <div class="row row--custom">
-        <div class="col-lg-6 col-md-8 col-sm-10 col-xs-10" data-aos-duration="1000" data-aos="fade-right">
-          <div class="testimonial-widget-large__image">
-            <img src="{% static '/image/1R1A0289.jpg' %}" alt="handsome-smiling-bearded-man-glasses-working-laptop" />
-          </div>
+    <div class="section-heading">
+      <h2 class="integrator-subheading heading-md text-center">
+        Уже используете Битрикс24?
+      </h2>
+      <p class="integrator-text text-center">Тогда вам может быть интересно это</p>
+    </div>
+    <div class="integrator-interesting-points">
+        <div class="interesting-point">
+          <span class="poin-number">
+            01
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-1.png' %}" alt="image alt" class="inline-svg" /></div>
+          <h3 class="interesting-title">Продление лицензии Битрикс24</h3>
+          <p class="integrator-text">Продлевайте лицензию с Правильными Интеграторами, чтобы продолжать пользоваться привычными преимуществами Битрикс24.</p>
+          <a href="" class="interesting-more">Узнать больше</a>
         </div>
-        <div class="col-lg-6 col-md-10 col-auto" data-aos-duration="1000" data-aos="fade-left">
-          <div class="testimonial-widget-large__body">
-            <div class="testimonial-widget-large__icon">
-              <img src="{% static '/image/home-1/testimonial-icon.svg' %}" alt="testimonial icon" />
-            </div>
-            <p class="testimonial-widget-large__review-text">
-              Мы не останавливаемся на внедрении Битрикс24. Мы обучаем ваших
-              сотрудников и сопровождаем вас на протяжении многих лет, чтобы вы
-              максимально использовали возможности этой CRM. Мы выстраиваем
-              партнерские отношения и помогаем вам достичь долгосрочных целей.
-            </p>
-
-            <h4 class="testimonial-widget-large__user-name mt-10">
-              Роман Сытько
-            </h4>
-            <span class="testimonial-widget-large__user-position">
-              CEO Правильные Интеграторы
-            </span>
-            <div class="testimonial-widget-large__link">
-              <a href="#" class="btn-link btn-arrow">Подробнее</a>
-            </div>
-          </div>
+        <div class="interesting-point">
+          <span class="poin-number">
+            02
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-2.png' %}" alt="image alt" class="inline-svg" /></div>
+          <h3 class="interesting-title">Подписка на Маркет Битрикс24</h3>
+          <p class="integrator-text">Расширьте функционал Битрикс24 с подпиской на Маркет. Вы получите дополнительные интеграции с сервисами и увеличение функционала основных инструментов.</p>
+          <a href="" class="interesting-more">Узнать больше</a>
         </div>
-      </div>
+        <div class="interesting-point">
+          <span class="poin-number">
+            03
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-3.png' %}" alt="image alt" class="inline-svg" /></div>
+          <h3 class="interesting-title">1C-Битрикс24: Enterprise</h3>
+          <p class="integrator-text">Enterprise — решение для крупного бизнеса от Битрикс24. Интеграция в вашу IT-инфраструктуру, для непрерывной работы портала 24/7.</p>
+          <a href="" class="interesting-more">Узнать больше</a>
+        </div>
+        <div class="interesting-point">
+          <span class="poin-number">
+            04
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-4.png' %}" alt="image alt" class="inline-svg" /></div>
+          <h3 class="interesting-title">Посмотреть все услуги</h3>
+          <p class="integrator-text">Пакетное и проектное внедрение Битрикс24, поддержка коробочной версии, разработкаи настройка интеграций с Битрикс24 и многое другое для работы вашего Бизнеса.</p>
+          <a href="" class="interesting-more">Узнать больше</a>
+        </div>
     </div>
   </div>
+  <div class="integrator-cta-base_over">
+    <img src="{% static '/image/home/three-bubles.png' %}" alt="Bubbles" />
+  </div>
 </div>
+
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Feature Section
@@ -616,7 +478,7 @@
     Home 1  : FAQ Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-<div class="integrator-faq-section padding-bottom-150 padding-top-150">
+<div class="integrator-faq-section padding-bottom-150 integrator-subsection">
   <div class="container">
     <div class="section-heading">
       <h2 class="integrator-subheading heading-md text-center">
@@ -628,7 +490,8 @@
         <div class="accordion-item">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#home-1-faq-item" aria-expanded="true" aria-controls="home-1-faq-item">
-            <h3>Сколько времени потребуется на внедрение Битрикс24?</h3> <div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+            <h3>Сколько времени потребуется на внедрение Битрикс24?</h3>
+            <div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
           </button>
           <div id="home-1-faq-item" class="accordion-collapse collapse show" data-bs-parent="#home-1-faq">
             <div class="accordion-item__body">
@@ -644,7 +507,8 @@
         <div class="accordion-item">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#home-1-faq-item-2" aria-expanded="false" aria-controls="home-1-faq-item-2">
-            <h3>Какие проблемы могут возникнуть в процессе внедрения?</h3>Какие проблемы могут возникнуть в процессе внедрения?<div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+            <h3>Какие проблемы могут возникнуть в процессе внедрения?</h3>
+            <div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
           </button>
           <div id="home-1-faq-item-2" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
             <div class="accordion-item__body">
@@ -675,7 +539,8 @@
         <div class="accordion-item">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#home-1-faq-item-3" aria-expanded="false" aria-controls="home-1-faq-item-3">
-            <h3>Оказываете ли вы поддержку после внедрения?</h3><div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+            <h3>Оказываете ли вы поддержку после внедрения?</h3>
+            <div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
           </button>
           <div id="home-1-faq-item-3" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
             <div class="accordion-item__body">
@@ -689,7 +554,8 @@
         <div class="accordion-item">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#home-1-faq-item-6" aria-expanded="false" aria-controls="home-1-faq-item-4">
-            <h3>Предоставляете ли гарантию на свои услуги?</h3><div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+            <h3>Предоставляете ли гарантию на свои услуги?</h3>
+            <div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
           </button>
           <div id="home-1-faq-item-6" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
             <div class="accordion-item__body">
@@ -706,7 +572,8 @@
         <div class="accordion-item">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#home-1-faq-item-5" aria-expanded="false" aria-controls="home-1-faq-item-5">
-            <h3>Какие интеграции с другими системами можно реализовать?</h3><div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+            <h3>Какие интеграции с другими системами можно реализовать?</h3>
+            <div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
           </button>
           <div id="home-1-faq-item-5" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
             <div class="accordion-item__body">
@@ -721,7 +588,8 @@
         <div class="accordion-item">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#home-1-faq-item-4" aria-expanded="false" aria-controls="home-1-faq-item-4">
-            <h3>Как обеспечивается безопасность данных в Битрикс24?</h3><div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
+            <h3>Как обеспечивается безопасность данных в Битрикс24?</h3>
+            <div class="accordion-button__icon"><img src="{% static '/image/icons/arrow-icon.png' %}" alt="icon"></div>
           </button>
           <div id="home-1-faq-item-4" class="accordion-collapse collapse" data-bs-parent="#home-1-faq">
             <div class="accordion-item__body">
